--- a/src/components/TicketVerification/TicketVerification.css
+++ b/src/components/TicketVerification/TicketVerification.css
@@ -1,6 +1,6 @@
 .ticket-verification-container {
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
