--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   width: 100%;
   overflow-x: hidden;
@@ -11,7 +11,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
-  background-color: #002f2f;
+  background-color: #000000;
   min-height: 100vh;
   overflow-x: hidden;
 }
@@ -23,7 +23,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #002f2f;
+  background-color: #000000;
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
@@ -33,6 +33,22 @@ body {
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+}
+
+/* Global Particles Background */
+.app-particles-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.app-content {
+  position: relative;
+  z-index: 10;
 }
 
 /* Note: Responsive utilities have been moved to responsive-utilities.css */
