--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,10 +1,21 @@
 .about-container {
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
   overflow-x: hidden;
+}
+
+/* Particles Background */
+.about-particles-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .about-content {
