--- a/src/components/AdminPortal/AdminPortal.css
+++ b/src/components/AdminPortal/AdminPortal.css
@@ -1,7 +1,7 @@
 /* Admin Portal Component Styles */
 .admin-portal-container {
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
