--- a/src/components/Events/Events.css
+++ b/src/components/Events/Events.css
@@ -3,11 +3,22 @@
 
 .events-container {
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   width: 100%;
   overflow-x: hidden;
+}
+
+/* Particles Background */
+.events-particles-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .events-content {
