--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   /* Colors */
   color-scheme: dark;
   color: rgba(255, 255, 255, 0.95);
-  background-color: #002f2f;
+  background-color: #000000;
 
   /* Font rendering */
   font-synthesis: none;
@@ -79,7 +79,7 @@ body {
   padding: 0;
   min-width: 100%;
   min-height: 100vh;
-  background-color: #002f2f;
+  background-color: #000000;
   color: white;
   overflow-x: hidden;
   position: relative;
